// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Column > matches snapshot 1`] = `
<div>
  <div
    class="w-full h-full bg-white flex flex-col overflow-hidden max-w-full"
  >
    <div
      class="flex justify-between items-center px-3 sm:px-4 py-3 border-b border-gray-200 flex-shrink-0 h-[52px]"
    >
      <div
        class="h-[28px] flex items-center flex-grow overflow-hidden mr-2"
      >
        <h2
          class="text-base sm:text-lg font-medium text-gray-800 leading-[28px] flex items-center transition-colors duration-200 overflow-hidden text-ellipsis whitespace-nowrap "
          data-testid="column-title-column-1"
        >
          Mad
        </h2>
      </div>
      <div
        class="flex items-center space-x-2 flex-shrink-0"
      >
        <div
          class="relative inline-block"
        >
          <button
            class="flex items-center text-blue-600 hover:text-blue-700 active:text-blue-800 cursor-pointer p-1.5 rounded hover:bg-blue-50 active:bg-blue-100 transition-colors duration-300 touch-feedback"
            data-testid="sort-toggle-column-1"
          >
            <span
              class="text-xs mr-1"
            >
              Order
            </span>
            <svg
              class="lucide lucide-arrow-up-down h-5 w-5 sm:h-4 sm:w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m21 16-4 4-4-4"
              />
              <path
                d="M17 20V4"
              />
              <path
                d="m3 8 4-4 4 4"
              />
              <path
                d="M7 4v16"
              />
            </svg>
            <span
              class="sr-only"
            >
              Sort
            </span>
          </button>
        </div>
        <div
          class="relative inline-block"
        >
          <button
            class="flex items-center text-gray-600 hover:text-blue-700 active:text-blue-800 cursor-pointer p-1.5 rounded hover:bg-blue-50 active:bg-blue-100 transition-colors duration-300 touch-feedback"
            data-testid="column-description-toggle-column-1"
          >
            <svg
              class="lucide lucide-align-left h-5 w-5 sm:h-4 sm:w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15 12H3"
              />
              <path
                d="M17 18H3"
              />
              <path
                d="M21 6H3"
              />
            </svg>
            <span
              class="sr-only"
            >
              Toggle Description
            </span>
          </button>
        </div>
        <div
          class="relative"
        >
          <div
            class="relative inline-block"
          >
            <button
              class="text-blue-600 hover:text-blue-700 active:text-blue-800 cursor-pointer p-1.5 rounded hover:bg-blue-50 active:bg-blue-100 transition-colors duration-300 touch-feedback"
              data-testid="column-menu-column-1"
            >
              <svg
                class="lucide lucide-ellipsis-vertical h-5 w-5 sm:h-4 sm:w-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="1"
                />
                <circle
                  cx="12"
                  cy="5"
                  r="1"
                />
                <circle
                  cx="12"
                  cy="19"
                  r="1"
                />
              </svg>
              <span
                class="sr-only"
              >
                More options
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex-1 overflow-y-auto p-2 sm:p-3 space-y-2 sm:space-y-3"
    >
      <div>
        Card Content
      </div>
    </div>
    <div
      class="relative inline-block"
    >
      <button
        class="w-full py-4 text-sm text-blue-600 bg-gray-50 hover:bg-gray-100 active:bg-gray-200 border-t border-gray-200 flex items-center justify-center cursor-pointer transition-colors duration-300 touch-feedback"
        data-testid="add-column-button"
      >
        + Add a card
      </button>
    </div>
  </div>
</div>
`;

exports[`Column > matches snapshot when adding card 1`] = `
<div>
  <div
    class="w-full h-full bg-white flex flex-col overflow-hidden max-w-full"
  >
    <div
      class="flex justify-between items-center px-3 sm:px-4 py-3 border-b border-gray-200 flex-shrink-0 h-[52px]"
    >
      <div
        class="h-[28px] flex items-center flex-grow overflow-hidden mr-2"
      >
        <h2
          class="text-base sm:text-lg font-medium text-gray-800 leading-[28px] flex items-center transition-colors duration-200 overflow-hidden text-ellipsis whitespace-nowrap "
          data-testid="column-title-column-1"
        >
          Mad
        </h2>
      </div>
      <div
        class="flex items-center space-x-2 flex-shrink-0"
      >
        <div
          class="relative inline-block"
        >
          <button
            class="flex items-center text-blue-600 hover:text-blue-700 active:text-blue-800 cursor-pointer p-1.5 rounded hover:bg-blue-50 active:bg-blue-100 transition-colors duration-300 touch-feedback"
            data-testid="sort-toggle-column-1"
          >
            <span
              class="text-xs mr-1"
            >
              Order
            </span>
            <svg
              class="lucide lucide-arrow-up-down h-5 w-5 sm:h-4 sm:w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m21 16-4 4-4-4"
              />
              <path
                d="M17 20V4"
              />
              <path
                d="m3 8 4-4 4 4"
              />
              <path
                d="M7 4v16"
              />
            </svg>
            <span
              class="sr-only"
            >
              Sort
            </span>
          </button>
        </div>
        <div
          class="relative inline-block"
        >
          <button
            class="flex items-center text-gray-600 hover:text-blue-700 active:text-blue-800 cursor-pointer p-1.5 rounded hover:bg-blue-50 active:bg-blue-100 transition-colors duration-300 touch-feedback"
            data-testid="column-description-toggle-column-1"
          >
            <svg
              class="lucide lucide-align-left h-5 w-5 sm:h-4 sm:w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15 12H3"
              />
              <path
                d="M17 18H3"
              />
              <path
                d="M21 6H3"
              />
            </svg>
            <span
              class="sr-only"
            >
              Toggle Description
            </span>
          </button>
        </div>
        <div
          class="relative"
        >
          <div
            class="relative inline-block"
          >
            <button
              class="text-blue-600 hover:text-blue-700 active:text-blue-800 cursor-pointer p-1.5 rounded hover:bg-blue-50 active:bg-blue-100 transition-colors duration-300 touch-feedback"
              data-testid="column-menu-column-1"
            >
              <svg
                class="lucide lucide-ellipsis-vertical h-5 w-5 sm:h-4 sm:w-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="1"
                />
                <circle
                  cx="12"
                  cy="5"
                  r="1"
                />
                <circle
                  cx="12"
                  cy="19"
                  r="1"
                />
              </svg>
              <span
                class="sr-only"
              >
                More options
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex-1 overflow-y-auto p-2 sm:p-3 space-y-2 sm:space-y-3"
    >
      <div>
        Card Content
      </div>
    </div>
    <form
      class="p-2 sm:p-3 border-t border-gray-200 flex-shrink-0"
      data-testid="add-card-form"
    >
      <textarea
        class="w-full rounded-none border-none bg-gray-100 text-base sm:text-sm p-3 mb-2 resize-none focus:ring-0"
        placeholder="Type here... Press Enter to save."
        required=""
        rows="3"
      />
      <div
        class="flex justify-end space-x-2"
      >
        <button
          class="px-3 py-2 text-xs font-medium text-gray-600 bg-gray-100 rounded hover:bg-gray-200 active:bg-gray-300 cursor-pointer transition-colors duration-300 touch-feedback"
          type="button"
        >
          Cancel
        </button>
        <button
          class="px-3 py-2 text-xs font-medium bg-blue-500 text-white rounded hover:bg-blue-600 active:bg-blue-700 disabled:opacity-50 cursor-pointer transition-colors duration-300 touch-feedback"
          disabled=""
          type="submit"
        >
          Save
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Column > matches snapshot when sorted by votes 1`] = `
<div>
  <div
    class="w-full h-full bg-white flex flex-col overflow-hidden max-w-full"
  >
    <div
      class="flex justify-between items-center px-3 sm:px-4 py-3 border-b border-gray-200 flex-shrink-0 h-[52px]"
    >
      <div
        class="h-[28px] flex items-center flex-grow overflow-hidden mr-2"
      >
        <h2
          class="text-base sm:text-lg font-medium text-gray-800 leading-[28px] flex items-center transition-colors duration-200 overflow-hidden text-ellipsis whitespace-nowrap "
          data-testid="column-title-column-1"
        >
          Mad
        </h2>
      </div>
      <div
        class="flex items-center space-x-2 flex-shrink-0"
      >
        <div
          class="relative inline-block"
        >
          <button
            class="flex items-center text-blue-600 hover:text-blue-700 active:text-blue-800 cursor-pointer p-1.5 rounded hover:bg-blue-50 active:bg-blue-100 transition-colors duration-300 touch-feedback"
            data-testid="sort-toggle-column-1"
          >
            <span
              class="text-xs mr-1"
            >
              Votes
            </span>
            <svg
              class="lucide lucide-arrow-up-down h-5 w-5 sm:h-4 sm:w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m21 16-4 4-4-4"
              />
              <path
                d="M17 20V4"
              />
              <path
                d="m3 8 4-4 4 4"
              />
              <path
                d="M7 4v16"
              />
            </svg>
            <span
              class="sr-only"
            >
              Sort
            </span>
          </button>
        </div>
        <div
          class="relative inline-block"
        >
          <button
            class="flex items-center text-gray-600 hover:text-blue-700 active:text-blue-800 cursor-pointer p-1.5 rounded hover:bg-blue-50 active:bg-blue-100 transition-colors duration-300 touch-feedback"
            data-testid="column-description-toggle-column-1"
          >
            <svg
              class="lucide lucide-align-left h-5 w-5 sm:h-4 sm:w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15 12H3"
              />
              <path
                d="M17 18H3"
              />
              <path
                d="M21 6H3"
              />
            </svg>
            <span
              class="sr-only"
            >
              Toggle Description
            </span>
          </button>
        </div>
        <div
          class="relative"
        >
          <div
            class="relative inline-block"
          >
            <button
              class="text-blue-600 hover:text-blue-700 active:text-blue-800 cursor-pointer p-1.5 rounded hover:bg-blue-50 active:bg-blue-100 transition-colors duration-300 touch-feedback"
              data-testid="column-menu-column-1"
            >
              <svg
                class="lucide lucide-ellipsis-vertical h-5 w-5 sm:h-4 sm:w-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="1"
                />
                <circle
                  cx="12"
                  cy="5"
                  r="1"
                />
                <circle
                  cx="12"
                  cy="19"
                  r="1"
                />
              </svg>
              <span
                class="sr-only"
              >
                More options
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex-1 overflow-y-auto p-2 sm:p-3 space-y-2 sm:space-y-3"
    >
      <div>
        Card Content
      </div>
    </div>
    <div
      class="relative inline-block"
    >
      <button
        class="w-full py-4 text-sm text-blue-600 bg-gray-50 hover:bg-gray-100 active:bg-gray-200 border-t border-gray-200 flex items-center justify-center cursor-pointer transition-colors duration-300 touch-feedback"
        data-testid="add-column-button"
      >
        + Add a card
      </button>
    </div>
  </div>
</div>
`;
